--- a/Presentation/TodoService.WebAPI/TodoService.WebAPI.csproj
+++ b/Presentation/TodoService.WebAPI/TodoService.WebAPI.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.26">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\TodoService.Application\TodoService.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\TodoService.Infrastructure\TodoService.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\TodoService.Persistence\TodoService.Persistence.csproj" />
