--- a/Presentation/TodoService.WebAPI/appsettings.json
+++ b/Presentation/TodoService.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLEXPRESS;Database=TodoServiceDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
